# inference-service-vllm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_inference.py
app/: config.py  inference.py  main.py
benchmarks/: gpu_monitor.py  metrics.py  report.py  runner.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_inference.py
